# TOMLConfig_v0

./: .gitmodules  CMakeLists.txt  README.md
cmake/: add_external_package.cmake
include/TOMLConfig/: IConfig.h  ITOMLFile.h
include/TOMLConfig/merge/: BasicMerger.h  IMerger.h
include/TOMLConfig/resource/: IResource.h  ResourceType.h
include/TOMLConfig/resource/abstract/: AbstractResourceException.h  LeafResource.h  NodeResource.h  RootResource.h
include/TOMLConfig/resource/filesystem/: DirectoryResource.h  FileResource.h  FilesystemResourceException.h  RootDirectoryResource.h  RootFileResource.h
src/: IConfig.cpp  IConfig.h  ITOMLFile.cpp
src/merge/: BasicMerger.cpp
src/resource/abstract/: LeafResource.cpp  NodeResource.cpp  RootResource.cpp
src/resource/filesystem/: DirectoryResource.cpp  FileResource.cpp  RootDirectoryResource.cpp  RootFileResource.cpp
src/resource/utils/: filesystem.cpp  filesystem.h
tests/: AbstractResourceTreeTest.cpp  AbstractResourceTreeTest.h  CMakeLists.txt  GlobalTest.cpp
tests/cmake/: init_resources.cmake
tests/mocks/: MockResource.h
tests/resources/: basic.toml
tests/resources/example01/: .gitignore
tests/resources/example03/default/: file02.toml  file03.toml
tests/resources/example03/expected/: file01.toml  file03.toml
tests/resources/example03/overwrite/: file03.toml
tests/src/: AbstractResourceTreeTest.cpp  AbstractResourceTreeTest.h  BasicMergerTest.cpp  BasicMergerTest.h  FilesystemResourceTreeTest.cpp  FilesystemResourceTreeTest.h  GlobalTest.cpp  GlobalTest.h  MergerTest.cpp  MergerTest.h  TOML11Test.cpp  TOML11Test.h
